Fixed text alignment for middle and bottom section

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
 .cards-container {
     display: flex;
     padding: 25px;
+    padding-bottom: 60px;
 }
 
 .description {
@@ -123,7 +124,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px;
+    gap: 100px;
 }
 
 .bottom-text {
@@ -174,6 +175,11 @@ body {
 }
 
 .info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
     max-width: 250px;
@@ -184,12 +190,16 @@ body {
 }
 
 .rectangle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #3882F6;
-    height: 70px;
+    height: 100px;
     width: 900px;
     border: 1px solid #3882F6;
     border-radius: 4px;
     padding: 25px;
+    margin: 25px;
 }
 
 .rectangle-header {
